--- a/src/about.ejs
+++ b/src/about.ejs
@@ -11,14 +11,11 @@
 <main>
   <article>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-3 col-sm-4 col-12">
-          <div id="profile"></div>
-        </div>
-        <div class="col-md-9 col-sm-8 col-12">
-            <p class="lead">A lifelong photographer, Marc Flennert's passion is the practice of cinematography.</p>
-            <p>With the combination of his natural creativity and technical know how, he's able to infuse his approach with a style of his own. Over the years he's gained vast experience working hand in hand with award winning directors, producers and agencies servicing major brands. Flennert continues to refine his talents by continually immersing himself in an array of projects around the world.</p>
-          </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-10 col-md-12">
+          <img class="img-fluid float-left mr-3 rounded" id="profile" alt="Marc Flennert" />
+          <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography.</p>
+          <p>With the combination of his natural creativity and technical know how, he's able to infuse his approach with a style of his own. Over the years he's gained vast experience working hand in hand with award winning directors, producers and agencies servicing major brands. Flennert continues to refine his talents by continually immersing himself in an array of projects around the world.</p>
         </div>
       </div>
     </div>
