--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-12">
+            <div class="col-lg-12">
                 <div class="copyright">
                     <p style="text-align: center">&copy;2019 Marc&nbsp;Flennert. All rights reserved.</p>
                 </div>
