--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="container-fluid">
+    <div class="container-fluid mt-4">
         <div class="row justify-content-center">
             <div class="col-lg-12">
                 <div class="copyright">
