--- a/src/partials/navbar.ejs
+++ b/src/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light">
-    <div class="container-fluid">
+    <div class="container-fluid mb-4">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -7,19 +7,19 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" target="_top" href="/index.html">Commercials</a>
+                    <a class="nav-link text-uppercase" target="_top" href="/index.html">Commercials</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" rel="noopener" href="https://vimeo.com/marcflennert">Shorts</a>
+                    <a class="nav-link text-uppercase" target="_blank" rel="noopener" href="https://vimeo.com/marcflennert">Shorts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" rel="noopener" href="http://photo.marcflennert.com">Photography</a>
+                    <a class="nav-link text-uppercase" target="_blank" rel="noopener" href="http://photo.marcflennert.com">Photography</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_top" href="/about.html">About</a>
+                    <a class="nav-link text-uppercase target="_top" href="/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mailto:info@marcflennert.com">Contact</a>
+                    <a class="nav-link text-uppercase" href="mailto:info@marcflennert.com">Contact</a>
                 </li>
             </ul>
         </div>
