--- a/src/partials/navbar.ejs
+++ b/src/partials/navbar.ejs
@@ -16,7 +16,7 @@
                     <a class="nav-link text-uppercase" target="_blank" rel="noopener" href="http://photo.marcflennert.com">Photography</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-uppercase target="_top" href="/about.html">About</a>
+                    <a class="nav-link text-uppercase" target="_top" href="/about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-uppercase" href="mailto:info@marcflennert.com">Contact</a>
